(Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2036. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5352

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -589,3 +589,8 @@ option:hover
 {
     margin-bottom:0px;
 }
+
+.right_col_small table .tr_head a, .right_col table .tr_head a, .right_col_med table .tr_head a
+{
+    text-decoration:underline;
+}
