(Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2050. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5364

--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -9,6 +9,9 @@
 <style type="text/css">
     @import url("includes/Esra.css");
     </style>
+<style type="text/css" media="print">
+    @import url("includes/Esra_print.css");
+    </style>
     <asp:contentplaceholder id="head" runat="server">
     </asp:contentplaceholder>
     <title>Employee Salary Review Analysis - Home</title>
