(Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2056. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5369

--- a/Esra.Web/includes/Esra_print.css
+++ b/Esra.Web/includes/Esra_print.css
@@ -4,16 +4,11 @@
 }
 body
 {
-    font-size:0.8em;
+    font-size:0.6em;
 	font-family: Arial, Verdana, Helvetica, sans-serif;
 }
-#page_title
-{
-    font-size:1em;
-    font-weight:bold;
-    float:right;
-}
-#header, #nav, .buttons, .back_button, .edit_button, #master_footer, #title, .master_p, .bbox
+
+#header, #nav, .buttons, .back_button, .edit_button, #master_footer, #title, .master_p, .bbox, #page_title
 {
     display:none;
 }
