--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -116,7 +116,7 @@
                <center><p class="master_p">
                     <asp:LinkButton ID="lblTitle" runat="server" Text="Employee Salary Review Analysis (ESRA)" Font-Bold="true" Font-Size="Larger" PostBackUrl="~/Default.aspx" ToolTip="Home" CssClass="title" CausesValidation="false"></asp:LinkButton></p></center>
                     <asp:Label ID="lbl_Message" runat="server" Text="Unable to delete record: Child records exist." Visible="False" Font-Bold="False"
-                        Font-Size="Small" ForeColor="Red"></asp:Label>&nbsp;&nbsp;
+                        Font-Size="Small" ForeColor="Red"></asp:Label>
                     <ajax:AnimationExtender ID="AutomationExtender1" runat="server" TargetControlID="lbl_Message">
                         <Animations>
                                 <OnLoad>
