ApplicationPage.cs: 	Added protected static readonly string KEY_MAINTENANCE_PANEL = "pnlMaintenance";         Added protected static readonly string KEY_ADMIN_PANEL = "pnlAdmin"; 	Revised method Page_Load: Changed occurances of KEY_ADMIN_MAINTENANCE_PANEL to either KEY_MAINTENANCE_PANEL and/or
KEY_ADMIN_PANEL as appropriate.

Esra.Master:
	Revised panel, which hides the admin and maintenance buttons.  Split into two separate panels pnlAdmin and pnlMAintenance, 

respectively.

Default.aspx.cs:
	Revised method Page_Load: Changed occurances of KEY_ADMIN_MAINTENANCE_PANEL to either KEY_MAINTENANCE_PANEL and/or 

KEY_ADMIN_PANEL as appropriate.
	Revised method rblDemoMode_SelectedIndexChanged: Changed occurances of KEY_ADMIN_MAINTENANCE_PANEL to either 

KEY_MAINTENANCE_PANEL and/or KEY_ADMIN_PANEL as appropriate.

Web.config: 
	Changed catbert webservice properties to use nimbus catbert: 	

https://nimbus.caes.ucdavis.edu/catbert/services/catbertwebservice.asmx
	Changed appSettings ReportServer to use "http://nimbus.caesdo.caes.ucdavis.edu/reportserver" (Migrated by TFS Migration Toolkit) (Updated by TFS to TFS Connector, server: http://1x:8080/, id 2067. )

git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5379

--- a/Esra.Web/Esra.Master
+++ b/Esra.Web/Esra.Master
@@ -38,10 +38,9 @@
         <li>
             <center><asp:ImageButton ID="ImageButton1" runat="server" ImageUrl="~/images/common/employee_salary_comparison.png" AlternateText="ESRA the dino" PostBackUrl="~/SalaryReviewAnalysisPage.aspx" ToolTip="Salary Review Analysis" CausesValidation="false"/></center>
             <br /><a href="SalaryReviewAnalysisPage.aspx">Salary Review<br />Analysis</a></li>
-            <asp:Panel ID="pnlAdminMaintenance" runat="server" >
-            
             
 	    <li class="nav2">
+	        <asp:Panel ID="pnlMaintenance" runat="server" >
 	         <center><asp:ImageButton ID="ImageButton5" runat="server" ImageUrl="~/images/common/maintenance.png" AlternateText="Maintenance" ToolTip="Maintenance" CausesValidation="false"/></center><br />
 	            <asp:HyperLink ID="HyperLink1" runat="server">Maintenance</asp:HyperLink>
 	            <ul>
@@ -49,13 +48,14 @@
 	                <li><a href="SalaryGradeQuartiles_UserInputForm.aspx">Salary Grade Quartiles</a></li>
 	                <li><a href="SalaryStep_UserInputForm.aspx">Salary Steps</a></li>
 	            </ul>
+	        </asp:Panel>
 	    </li>
 	    <li>
+	        <asp:Panel ID="pnlAdmin" runat="server" >
             <center><asp:ImageButton ID="ImageButton2" runat="server" ImageUrl="~/images/common/user_admin.png" AlternateText="User Administration" ToolTip="User Admin" PostBackUrl="~/UserAdminPage.aspx" CausesValidation="false"/></center>
             <br /><a href="UserAdminPage.aspx">User Administration</a>
+            </asp:Panel>
         </li>
-        
-        </asp:Panel>
         <li class="nav2">
             <center><a href="mailto:<%= WebConfigurationManager.AppSettings["AppMailTo"] %>?subject=[<%=WebConfigurationManager.AppSettings["AppName"] %>] <%= Version %> <your question or comment>">
                 <img src="images/common/feedback.png" alt="Feedback"/></a></center>
