Esra.css:  Added "bold css class.  (Updated by TFS to TFS Connector, server: http://1x:8080/, id 4345. )
git-tfs-id: [https://tfs.caes.ucdavis.edu:8088/tfs/DefaultCollection]$/ESRA/Trunk/Esra;C5436

--- a/Esra.Web/includes/Esra.css
+++ b/Esra.Web/includes/Esra.css
@@ -626,10 +626,16 @@ option:hover
     background-color:#97d092;
 }
 
+.bold
+{
+    font-weight:bold;
+}
+
 .light_green_edit
 {
     padding:2px 5px 2px 5px;
 }
+
 .note
 {
     clear:both;
