got the search working a little better and added in a mini profiler

--- a/Esra.Web/Views/EmployeeAjax/Index.cshtml
+++ b/Esra.Web/Views/EmployeeAjax/Index.cshtml
@@ -31,7 +31,7 @@
 
 @*@Html.DropDownList("department", new SelectList(ViewBag.TitlesList, "AbbreviatedName", "TitleCode"))*@
 
-@using (Html.BeginForm("Index", "EmployeeAjax", FormMethod.Get)) { 
+@using (Html.BeginForm()) { 
     <fieldset>
         <legend>Filter Results</legend>
         
