--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
     <script src="@Url.Script("jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     @*<script src="http://code.jquery.com/jquery-latest.js"></script>*@
+    @MvcMiniProfiler.MiniProfiler.RenderIncludes()
 
     @if (false)
     { //Load the jquery docs for intellisense
